Fixed some overlapping issues again

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ section:nth-child(2n){
 #body-header .social-icons li a i{
     border-radius: 50%;
     margin: 10px 10px 10px;
-    padding: 10px 14px 20px 10px;
+    padding: 10px 7px 20px 10px;
     /*height: 20rem; width: 1.5rem;*/
 }
 
@@ -187,13 +187,13 @@ section:nth-child(2n){
     box-shadow: 0px 0px 6px 4px rgba(230, 196, 196, 0.3);
 }
 
-#contact .social-icons li a i:hover {
-    box-shadow: 0px 0px 6px 4px rgba(230, 196, 196, 0.3);
+#contact .social-icons li a i{
+    margin: 10px 10px 10px;
+    padding: 10px 7px 20px 10px;
 }
 
-.social-icons li a img{
-    width: 1.3rem;
-    padding: 8px;
+#contact .social-icons li a i:hover {
+    box-shadow: 0px 0px 6px 4px rgba(230, 196, 196, 0.3);
 }
 
 /*About page*/
@@ -608,9 +608,9 @@ input:focus, select:focus, textarea:focus, button:focus {
 }
 
 @media screen and (max-width: 572px){
-  /*  html{
-        font-size: 15px;
-    }*/
+    html{
+        font-size: 10px;
+    }
     .timeline-box{
         left: 10% !important;
         width: 100%;
